[gd_scene load_steps=8 format=3 uid="uid://w4wnptey0l6d"]

[ext_resource type="Script" path="res://scenes/projectiles/bullet.gd" id="1_xefui"]
[ext_resource type="PackedScene" uid="uid://gpisbgm7lfpt" path="res://scenes/effects/enemy_bullet_hit_round.tscn" id="2_l048o"]
[ext_resource type="Texture2D" uid="uid://coen61cw6er2y" path="res://sprites/enemy_bullet_2.png" id="3_rvfff"]
[ext_resource type="PackedScene" uid="uid://dn6dkghyx5fp" path="res://scenes/effects/smoke_generator.tscn" id="4_p4ika"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uc06v"]
radius = 5.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_d3mmu"]
atlas = ExtResource("3_rvfff")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_30tjh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3mmu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="EnemyBulletStraight" type="Area2D" groups=["Bullet"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_xefui")
speed = 100
hitEffect = ExtResource("2_l048o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uc06v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_30tjh")
frame_progress = 0.399148

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="SmokeGenerator" parent="." instance=ExtResource("4_p4ika")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
